# Ericsson2020

./: .gitignore  CMakeLists.txt  README.md  log2test.txt
doc/: virus.drawio
doc/UML Generator/: Doxyfile_config
doc/UML Generator/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  functions_func_i.html  functions_func_l.html  functions_func_n.html  functions_func_o.html  functions_func_p.html  functions_func_r.html  functions_func_s.html  functions_func_t.html  functions_func_u.html  functions_func_v.html  functions_func_w.html  functions_func_~.html  functions_g.html  functions_h.html  functions_i.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_r.html  functions_rela.html  functions_s.html  (+55 more)
doc/pseudo codes/: fileio.cpp  lifehappens.cpp  pastebin.cpp
src/: ai.cpp  ai.h  antiVirus.cpp  antiVirus.h  config.h  country.cpp  country.h  debug.h  district.cpp  district.h  draw.cpp  draw.h  examples.h  field.cpp  field.h  fileio.cpp  fileio.h  graphalgos.cpp  graphalgos.h  graphics.cpp  graphics.h  grid.cpp  grid.h  iface.cpp  iface.h  lifehappens.cpp  lifehappens.h  logic.cpp  logic.h  main.cpp  mainloop.cpp  mainloop.h  protocol.cpp  protocol.h  random.cpp  random.h  sector.cpp  sector.h  utils.cpp  utils.h  (+4 more)
src/pseudo codes/: infect.cpp
testfiles/: ex3.csv  ex3.h  test3.csv  test3v2.csv
testfiles/round1/: ex3.h  test2.csv
testfiles/round2/: .server1.csv.swp  leak.csv  leak.csv.bak  leak2.csv  noFlooding.csv  noFlooding.csv.bak  segfault.csv  segfault.csv.bak  server1.csv  server1.csv.bak  server1299122113.csv  server1299122113.csv.bak  server1318360533.csv  server1318360533.csv.bak  test1.csv  visual.csv  visual.csv.bak
testfiles/round2.1/: log26188.txt  log26188.txt.bak
testfiles/round2.5/: script.sh  segfault.txt
testfiles/round3/: log0222PM.txt  log12%3A17%3A23.txt  negative-infection-1232PM.txt  server66137279.csv  server66137279.csv.bak
(+684 files in other folders)
